test: authenticate restaurant mysql integration flows